<resources>
    <string name="app_name">Star Trek Favorite Captain</string>
    <string name="action_settings">Settings</string>
    <string name="info_text">
        "INFORMATION"
        "\nWelcome to the Star Trek Favorite Captain voting App."
        "\nTo begin voting click on the button Start Voting."
        "\nYou will then be taken screen by screen through the different Star Trek captains."
        "\nVote by dragging the seekbar across to the right until you are happy with the vote."
        "\nVotes are rated between 0% - 100%."
        "\n\nOn the Media screen you can take some fan photos and also view them."
        "\nYou can view the latest Star Trek Dicovery series clips and visit the official Star Trek website."
        "\nTo view results click on the View Results button on the Home screen."
    </string>
    <string name="media1">New Series STAR TREK DISCOVERY Video Clip</string>
    <string name="title_activity_scroll">ScrollActivity</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="media">Media</string>
    <string name="engage_cloak">ENGAGE CLOAK</string>
    <string name="engage_warp">ENGAGE WARP</string>
    <string name="take_fan_photo">Take Fan Photo</string>
    <string name="star_trek_online">STAR TREK ONLINE</string>
    <string name="captain_archer_vote">CAPTAIN ARCHER VOTE:</string>
    <string name="vote">Vote</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="photo_display">Photo Display</string>
    <string name="fan_gallery">Fan Gallery</string>
    <string name="information">Information</string>
    <string name="captain_janeway_vote">CAPTAIN JANEWAY VOTE:</string>
    <string name="captain_kirk_vote">CAPTAIN KIRK VOTE:</string>
    <string name="register">Register</string>
    <string name="captain_picard_vote">CAPTAIN PICARD VOTE:</string>
    <string name="voting_results">Voting Results</string>
    <string name="captain_sisko_vote">CAPTAIN SISKO VOTE:</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_voting">Start Voting</string>
    <string name="view_results">View Results</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>
