<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:layout_width="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
tools:context="com.example.mainaccount.startrekfavoritecaptain.MainActivity">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:srcCompat="@drawable/favorite_captain_logo"
    android:id="@+id/imageView2"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />


<Button
    android:text="@string/start_voting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/button"
    android:layout_alignBottom="@+id/imageView2"
    android:layout_centerHorizontal="true"
    android:background="@color/colorPrimary"
    android:textColor="@android:color/white"
    android:textSize="@dimen/custom_text"
    android:layout_marginTop="121dp"
    android:fontFamily="sans-serif"
    android:textStyle="normal|bold"
    android:elevation="0dp" />


    <Button
        android:text="@string/media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />
    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <Button
        android:text="@string/view_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewResultsBtn"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_below="@+id/registerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <Button
        android:text="@string/title_activity_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_below="@+id/viewResultsBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />


    <TextView
        android:id="@+id/informationTextView"
        android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/map"
        android:gravity="center_horizontal"
        android:text="@string/quickstart_message" />

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/informationTextView"
        android:text="@string/subscribe_to_news" />

    <Button
        android:id="@+id/logTokenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscribeButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/log_token" />





    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@color/colorAccent"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:id="@+id/fab"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/i"
        app:elevation="19dp"
        app:rippleColor="?attr/actionModeSplitBackground" />


</RelativeLayout>
</ScrollView>
