<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:layout_width="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_archer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mainaccount.startrekfavoritecaptain.ActivityArcher">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/archer"
        android:id="@+id/imageViewA"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewA"
        android:textSize="@dimen/custom_text"
        android:padding="9dp"
        android:layout_marginTop="@dimen/custom_margin"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:layout_below="@+id/imageViewA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/captain_archer_vote" />


    <Button
        android:text="@string/vote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonVoteA"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/custom_margin"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/textViewA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:textSize="@dimen/custom_text" />


    <Button
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonNextA"
        android:layout_marginTop="@dimen/custom_margin"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/buttonVoteA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeBtn"
        android:layout_marginTop="@dimen/custom_margin"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/buttonNextA"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:textStyle="normal|bold" />


    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarA"
        android:max="100"
        android:layout_below="@+id/homeBtn"
        android:layout_marginTop="@dimen/custom_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
</ScrollView>
