<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:layout_width="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_picture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mainaccount.startrekfavoritecaptain.ActivityDisplayPicture">


    <TextView
        android:text="@string/photo_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/photoText"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_below="@+id/photoDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />



    <Button
        android:text="@string/take_fan_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCamera"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/custom_margin"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/photoText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:textSize="@dimen/custom_text" />

    <Button
        android:text="@string/fan_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGallery"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/custom_margin"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/buttonCamera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:textSize="@dimen/custom_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star_trek_fan"
        android:id="@+id/photoDisplay"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
</ScrollView>
