<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:layout_width="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mainaccount.startrekfavoritecaptain.ActivityResult">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/favorite_captain_logo"
        android:id="@+id/imageView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/voting_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginBottom="85dp"
        android:layout_centerHorizontal="true"
        tools:textAlignment="center" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/enterprise"
        android:id="@+id/starship"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@+id/textView4"
        android:id="@+id/resultText"
        android:textColor="@color/colorAccent"
        android:textStyle="normal|bold"
        tools:textAlignment="center" />


    <Button
        android:text="@string/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_button"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/starship"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:textStyle="normal|bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/media_button"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="@dimen/custom_text"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:layout_below="@+id/home_button"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="21dp"
        android:layout_alignParentStart="true" />


</RelativeLayout>
</ScrollView>
